--- a/index.html
+++ b/index.html
@@ -2,28 +2,53 @@
   <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <title>Location-based AR.js demo</title>
+    <title>Location-based demo</title>
     <script src="https://aframe.io/releases/1.3.0/aframe.min.js"></script>
     <script src="https://unpkg.com/aframe-look-at-component@0.8.0/dist/aframe-look-at-component.min.js"></script>
     <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar-nft.js"></script>
+    <style>
+      #debug {
+        position: fixed;
+        z-index: 10000;
+        background-color: #fff;
+        padding: 10px;
+        top: 0;
+        left: 0;
+        display: block;
+      }
+    </style>
   </head>
 
   <body style="margin: 0; overflow: hidden;">
+    <div id="debug"></div>
     <a-scene
       vr-mode-ui="enabled: false"
       embedded
-      arjs="sourceType: webcam; debugUIEnabled: false;"
-    >
+      arjs="sourceType: webcam; debugUIEnabled: false;">
         <a-box
          position="0 0 -3"
-         rotation="0 45 0"
-         material="color: #4CC3D9"
-         animation="property: rotation; from: 0 0 0; to: 360 360 0; loop: true; dur: 3000; easing: linear"
-         animation__2="property: scale; from: 1 1 1; to: 0.1 0.1 0.1; dur: 1000; loop: true; dir: alternate"
-         look-at="[gps-camera]"
-         gps-new-entity-place="latitude: 35.531982632773875; longitude: 139.65803204636032;">
+         material="color: #red"
+         gps-entity-place="latitude: 35.531982632773875; longitude: 139.65803204636032;"
+         scale="15 15 15">
         </a-box>
+        <a-text
+        id="text"
+        value=""
+        look-at="[gps-camera]"
+        scale="30 30 30"
+        position="0 55 0"
+        gps-entity-place="latitude: 35.531982632773875; longitude: 139.65803204636032;"
+      ></a-text>
       <a-camera gps-camera rotation-reader> </a-camera>
     </a-scene>
+    <script>
+      window.addEventListener('load', () => {
+        const text = document.getElementById('text');
+        text.addEventListener('gps-entity-place-update-positon', (event) => {
+          document.getElementById('debug').textContent = `あと${event.detail.distance}m`;
+          text.setAttribute('value', text.getAttribute('distanceMsg') + ' left');
+        });
+      });
+    </script>
   </body>
 </html>
