[fix] fix color red
#red -> red

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       arjs="sourceType: webcam; debugUIEnabled: false;">
         <a-box
          position="0 0 -3"
-         material="color: #red"
+         material="color: red"
          gps-entity-place="latitude: 35.531982632773875; longitude: 139.65803204636032;"
          scale="15 15 15">
         </a-box>
