--- a/index.html
+++ b/index.html
@@ -1,54 +1,21 @@
+<!DOCTYPE html>
 <html>
   <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <title>Location-based demo</title>
-    <script src="https://aframe.io/releases/1.3.0/aframe.min.js"></script>
+    <script src="https://aframe.io/releases/1.2.0/aframe.min.js"></script>
     <script src="https://unpkg.com/aframe-look-at-component@0.8.0/dist/aframe-look-at-component.min.js"></script>
-    <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar-nft.js"></script>
-    <style>
-      #debug {
-        position: fixed;
-        z-index: 10000;
-        background-color: #fff;
-        padding: 10px;
-        top: 0;
-        left: 0;
-        display: block;
-      }
-    </style>
+    <script src="https://raw.githack.com/AR-js-org/AR.js/3.3.3/aframe/build/aframe-ar.js"></script>
+    <script src="https://raw.githack.com/donmccurdy/aframe-extras/master/dist/aframe-extras.loaders.min.js"></script>
   </head>
 
-  <body style="margin: 0; overflow: hidden;">
-    <div id="debug"></div>
-    <a-scene
-      vr-mode-ui="enabled: false"
-      embedded
-      arjs="sourceType: webcam; debugUIEnabled: false;">
-        <a-box
-         position="0 0 -3"
-         material="color: red"
-         gps-entity-place="latitude: 35.531982632773875; longitude: 139.65803204636032;"
-         scale="15 15 15">
-        </a-box>
-        <a-text
-        id="text"
-        value=""
-        look-at="[gps-camera]"
-        scale="30 30 30"
-        position="0 55 0"
-        gps-entity-place="latitude: 35.531982632773875; longitude: 139.65803204636032;"
-      ></a-text>
+  <body> 
+    <a-scene embedded="" arjs="sourceType:webcam;debugUIEnabled:false;" vr-mode-ui="enabled:false;" renderer="antialias:true;" device-orientation-permission-ui="enabled:false;" inspector="" keyboard-shortcuts="" screenshot="">
+      <a-box gps-entity-place="longitude: 35.53200151139874; latitude: 139.65800654424083;"></a-box>
+      <a-box gps-entity-place="longitude: 35.46912292193346 ; latitude: 139.61782545023868;"></a-box>
       <a-camera gps-camera rotation-reader> </a-camera>
     </a-scene>
-    <script>
-      window.addEventListener('load', () => {
-        const text = document.getElementById('text');
-        text.addEventListener('gps-entity-place-update-positon', (event) => {
-          document.getElementById('debug').textContent = `あと${event.detail.distance}m`;
-          text.setAttribute('value', text.getAttribute('distanceMsg') + ' left');
-        });
-      });
-    </script>
   </body>
 </html>
+
