--- a/index.html
+++ b/index.html
@@ -11,9 +11,14 @@
   </head>
 
   <body> 
-    <a-scene embedded="" arjs="sourceType:webcam;debugUIEnabled:false;" vr-mode-ui="enabled:false;" renderer="antialias:true;" device-orientation-permission-ui="enabled:false;" inspector="" keyboard-shortcuts="" screenshot="">
-      <a-box gps-entity-place="longitude: 35.53200151139874; latitude: 139.65800654424083;"></a-box>
-      <a-box gps-entity-place="longitude: 35.46912292193346 ; latitude: 139.61782545023868;"></a-box>
+    <a-scene vr-mode-ui="enabled: false" embedded arjs="sourceType: webcam; debugUIEnabled: false;">
+      <a-text
+      value="This content will always face you."
+      look-at="[gps-camera]"
+      scale="50 50 50"
+      gps-entity-place="latitude: 35.53191748889716 ; longitude: 139.65818694681784;"
+    ></a-text>
+      <!-- <a-box scale="50 50 50" gps-entity-place="longitude: 35.53200151139874; latitude: 139.65800654424083;"></a-box> -->
       <a-camera gps-camera rotation-reader> </a-camera>
     </a-scene>
   </body>
