--- a/index.html
+++ b/index.html
@@ -7,10 +7,12 @@
 <script type='text/javascript' src='https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar.js'></script>
 </head>
 <body>
-<a-scene vr-mode-ui='enabled: false' embedded arjs='sourceType: webcam; videoTexture: true; debugUIEnabled: false' renderer='antialias: true; alpha: true'>
+<a-scene vr-mode-ui='enabled: false' arjs='sourceType: webcam; videoTexture: true; debugUIEnabled: false' renderer='antialias: true; alpha: true'>
     <a-camera gps-new-camera='gpsMinDistance: 5'></a-camera>
-    <a-gltf-model src="obj/pin.glb" gps-new-entity-place="latitude: 35.532069998290076; longitude: 139.65783868194293" ></a-gltf-model>
+    <!-- <a-gltf-model src="obj/pin.glb" scale="5 5 5" gps-new-entity-place="latitude:35.532069998290076; longitude:139.65783868194293" ></a-gltf-model> -->
 </a-scene>
+
+<script type="text/javascript" src="lib/index.js"></script>
 </body>
 </html>
 
