--- a/index.html
+++ b/index.html
@@ -5,14 +5,16 @@
 <script src="https://aframe.io/releases/1.3.0/aframe.min.js"></script>
 <script type='text/javascript' src='https://raw.githack.com/AR-js-org/AR.js/master/three.js/build/ar-threex-location-only.js'></script>
 <script type='text/javascript' src='https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar.js'></script>
+<link rel="stylesheet" href="./lib/css/style.css">
 </head>
 <body>
+    <div id="debug"></div>
 <a-scene vr-mode-ui='enabled: false' arjs='sourceType: webcam; videoTexture: true; debugUIEnabled: false' renderer='antialias: true; alpha: true'>
     <a-camera gps-new-camera='gpsMinDistance: 5'></a-camera>
     <!-- <a-gltf-model src="obj/pin.glb" scale="5 5 5" gps-new-entity-place="latitude:35.532069998290076; longitude:139.65783868194293" ></a-gltf-model> -->
 </a-scene>
 
-<script type="text/javascript" src="lib/index.js"></script>
+<script type="text/javascript" src="lib/js/index.js"></script>
 </body>
 </html>
 
