--- a/glbTest.html
+++ b/glbTest.html
@@ -7,7 +7,12 @@
 </head>
 <body>
   <a-scene vr-mode-ui="enabled: false">
-    <a-gltf-model src="obj/pin.glb" position="0 0 -10" scale="1 1 1"></a-gltf-model>
+    <!-- <a-gltf-model src="obj/pin.glb" position="0 0 -10" scale="1 1 1"></a-gltf-model> -->
+    <a-entity
+    position="0 0 -10"
+    scale="1 1 1"
+    gltf-model="lib/obj/pin.glb"
+  ></a-entity>
   </a-scene>
 </body>
 </html>
