--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div id="debug"></div>
 <a-scene vr-mode-ui='enabled: false' arjs='sourceType: webcam; videoTexture: true; debugUIEnabled: false' renderer='antialias: true; alpha: true'>
     <a-camera id="ARcamera" gps-new-camera='gpsMinDistance: 5'> <a-cursor></a-cursor></a-camera>
-    <!-- <a-gltf-model src="obj/pin.glb" scale="5 5 5" gps-new-entity-place="latitude:35.532069998290076; longitude:139.65783868194293" ></a-gltf-model> -->
+     <a-entity gltf-model="lib/obj/pin.glb" scale="10 10 10" gps-new-entity-place="latitude:35.52279267479966; longitude:139.65843120161273" ></a-entity>
 </a-scene>
 
 <script type="text/javascript" src="lib/js/index.js"></script>
