--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <!-- <a-entity camera gps-new-camera='gpsMinDistance: 5'><a-cursor></a-cursor></a-entity> -->
 </a-scene>
 <script type="text/javascript" src="lib/js/index.js"></script>
+<script src="./lib/js/CalcVR.js" type="module"></script>
 </body>
 </html>
 
