--- a/index.html
+++ b/index.html
@@ -2,20 +2,21 @@
 <html>
 <head>
 <title>AR.js A-Frame Location-based</title>
-<script src="https://aframe.io/releases/1.3.0/aframe.min.js"></script>
+<script src="https://aframe.io/releases/1.2.0/aframe.min.js"></script>
 <script type='text/javascript' src='https://raw.githack.com/AR-js-org/AR.js/master/three.js/build/ar-threex-location-only.js'></script>
-<!-- <script type='text/javascript' src='https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar.js'></script> -->
-<script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar-nft.js"></script>
+<script type='text/javascript' src='https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar.js'></script>
+
+<!-- <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar-nft.js"></script> -->
 <link rel="stylesheet" href="./lib/css/style.css">
 </head>
 <body>
     <div id="debug"></div>
-<a-scene vr-mode-ui='enabled: false' arjs='sourceType: webcam; videoTexture: true; debugUIEnabled: false' renderer='antialias: true; alpha: true'>
+<a-scene vr-mode-ui='enabled: false'  arjs='sourceType: webcam; videoTexture: true; debugUIEnabled: false' renderer='antialias: true; alpha: true logarithmicDepthBuffer: true;'>
 
-    <a-camera id="ARcamera" gps-new-camera='gpsMinDistance: 5'>  <a-cursor></a-cursor> </a-camera>
+    <a-camera id="ARcamera" gps-camera='gpsMinDistance: 5' rotation-reader>  <a-cursor></a-cursor> </a-camera>
     <!-- <a-entity camera gps-new-camera='gpsMinDistance: 5'><a-cursor></a-cursor></a-entity> -->
 </a-scene>
-<script type="text/javascript" src="lib/js/index.js"></script>
+<!-- <script type="text/javascript" src="lib/js/index.js"></script> -->
 <script src="./lib/js/CalcVR.js" type="module"></script>
 </body>
 </html>
