--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <script src="https://aframe.io/releases/1.2.0/aframe.min.js"></script>
 <script type='text/javascript' src='https://raw.githack.com/AR-js-org/AR.js/master/three.js/build/ar-threex-location-only.js'></script>
 <script type='text/javascript' src='https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar.js'></script>
-
+<script src="https://unpkg.com/aframe-look-at-component@0.8.0/dist/aframe-look-at-component.min.js"></script>
 <!-- <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar-nft.js"></script> -->
 <link rel="stylesheet" href="./lib/css/style.css">
 </head>
@@ -16,6 +16,10 @@
     <a-camera id="ARcamera" gps-camera='gpsMinDistance: 5' rotation-reader>  <a-cursor></a-cursor> </a-camera>
     <!-- <a-entity camera gps-new-camera='gpsMinDistance: 5'><a-cursor></a-cursor></a-entity> -->
 </a-scene>
+<div id="nav" class="">
+    <div id="locationName">Text</div>
+        <div id ="distance">Trrrrrrrrrrrrrrrrrextm</div>
+</div>
 <!-- <script type="text/javascript" src="lib/js/index.js"></script> -->
 <script src="./lib/js/CalcVR.js" type="module"></script>
 </body>
