--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div id="debug"></div>
 <a-scene vr-mode-ui='enabled: false'  arjs='sourceType: webcam; videoTexture: true; debugUIEnabled: false' renderer='antialias: true; alpha: true logarithmicDepthBuffer: true;'>
 
-    <a-camera id="ARcamera" gps-camera='gpsMinDistance: 5' look-controls-enabled='false' arjs-look-controls='smoothingFactor: 0.1' rotation-reader>  <a-cursor></a-cursor> </a-camera>
+    <a-camera id="ARcamera" gps-camera='gpsMinDistance: 5' rotation-reader>  <a-cursor></a-cursor> </a-camera>
     <!-- <a-entity camera gps-new-camera='gpsMinDistance: 5'><a-cursor></a-cursor></a-entity> -->
 </a-scene>
 <div id="nav" class="">
