--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
+<meta charset="utf-8">
 <title>AR.js A-Frame Location-based</title>
 <script src="https://aframe.io/releases/1.2.0/aframe.min.js"></script>
 <script type='text/javascript' src='https://raw.githack.com/AR-js-org/AR.js/master/three.js/build/ar-threex-location-only.js'></script>
 <script type='text/javascript' src='https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar.js'></script>
-<!-- <script src="https://unpkg.com/aframe-look-at-component@0.8.0/dist/aframe-look-at-component.min.js"></script> -->
+<script src="https://unpkg.com/aframe-look-at-component@0.8.0/dist/aframe-look-at-component.min.js"></script>
 <!-- <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar-nft.js"></script> -->
 <link rel="stylesheet" href="./lib/css/style.css">
 </head>
@@ -13,7 +14,7 @@
     <div id="debug"></div>
 <a-scene vr-mode-ui='enabled: false'  arjs='sourceType: webcam; videoTexture: true; debugUIEnabled: false' renderer='antialias: true; alpha: true logarithmicDepthBuffer: true;'>
 
-    <a-camera id="ARcamera" gps-camera='gpsMinDistance: 5' rotation-reader>  <a-cursor></a-cursor> </a-camera>
+    <a-camera id="ARcamera" gps-camera='gpsMinDistance: 5' arjs-look-controls='smoothingFactor: 0.1' rotation-reader>  <a-cursor></a-cursor> </a-camera>
     <!-- <a-entity camera gps-new-camera='gpsMinDistance: 5'><a-cursor></a-cursor></a-entity> -->
 </a-scene>
 <div id="nav" class="">
@@ -21,8 +22,8 @@
         <div id ="distance">Trrrrrrrrrrrrrrrrrextm</div>
 </div>
 <!-- arjs-look-controls='smoothingFactor: 0.1' -->
-<!-- <script type="text/javascript" src="lib/js/index.js"></script> -->
-<script src="./lib/js/CalcVR.js" type="module"></script>
+<script type="text/javascript" src="./lib/js/index.js"></script>
+<!-- <script src="./lib/js/CalcVR.js" type="module"></script> -->
 </body>
 </html>
 
