--- a/index.html
+++ b/index.html
@@ -7,16 +7,19 @@
 <script type='text/javascript' src='https://raw.githack.com/AR-js-org/AR.js/master/three.js/build/ar-threex-location-only.js'></script>
 <script type='text/javascript' src='https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar.js'></script>
 <script src="https://unpkg.com/aframe-look-at-component@0.8.0/dist/aframe-look-at-component.min.js"></script>
-<!-- <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar-nft.js"></script> -->
 <link rel="stylesheet" href="./lib/css/style.css">
 </head>
 <body>
     <div id="debug"></div>
     <div id="debugdistance"></div>
 <a-scene vr-mode-ui='enabled: false'  arjs='sourceType: webcam; videoTexture: true; debugUIEnabled: false' renderer='antialias: true; logarithmicDepthBuffer: true; alpha: true; '>
-
-    <a-camera id="ARcamera" gps-camera='gpsMinDistance: 5'  rotation-reader>  <a-cursor></a-cursor> </a-camera>
-    <!-- <a-entity camera gps-new-camera='gpsMinDistance: 5'><a-cursor></a-cursor></a-entity> -->
+    <a-entity id="ARcamera" camera look-controls wasd-controls gps-camera='gpsMinDistance: 5'  rotation-reader>
+        <a-entity cursor="fuse: true;"
+                  position="0 0 -3"
+                  geometry="primitive: ring; radiusInner: 0.1; radiusOuter: 0.15;"
+                  material="color: #00CED1; shader: flat; opacity: 0.6">
+        </a-entity>
+    </a-entity>
 </a-scene>
 <div id="nav" class="">
     <div id="locationName">Text</div>
@@ -24,7 +27,7 @@
 </div>
 <!-- arjs-look-controls='smoothingFactor: 0.1' -->
 <!-- <script type="text/javascript" src="./lib/js/index.js"></script> -->
-<script src="./lib/js/CalcVR.js" type="module"></script>
+<script src="./lib/js/CalcAR.js" type="module"></script>
 </body>
 </html>
 
