--- a/index.html
+++ b/index.html
@@ -3,16 +3,29 @@
 <head>
 <meta charset="utf-8">
 <title>AR.js A-Frame Location-based</title>
+<meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1.0">
 <script src="https://aframe.io/releases/1.2.0/aframe.min.js"></script>
-<script type='text/javascript' src='https://raw.githack.com/AR-js-org/AR.js/master/three.js/build/ar-threex-location-only.js'></script>
-<script type='text/javascript' src='https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar.js'></script>
+<script type='text/javascript' src='https://raw.githack.com/AR-js-org/AR.js/3.4.5/three.js/build/ar-threex-location-only.js'></script>
+<script type='text/javascript' src='https://raw.githack.com/AR-js-org/AR.js/3.4.5/aframe/build/aframe-ar.js'></script>
 <script src="https://unpkg.com/aframe-look-at-component@0.8.0/dist/aframe-look-at-component.min.js"></script>
 <link rel="stylesheet" href="./lib/css/style.css">
 </head>
 <body>
-    <div id="debug"></div>
-    <div id="debugdistance"></div>
-<a-scene vr-mode-ui='enabled: false'  arjs='sourceType: webcam; videoTexture: true; debugUIEnabled: false' renderer='antialias: true; logarithmicDepthBuffer: true; alpha: true; '>
+    <div id="debug-nav">
+        <div class="debug-text" id="debug">Test</div>
+        <div class="debug-text" id="debugdistance">Test</div>
+    </div>  
+    <div id = "nav-menu">
+          <input type="checkbox" class="menu-btn" id="menu-btn">
+          <label for="menu-btn" class="menu-icon"><span class="navicon"></span></label>
+          <ul class="menu">
+            <li><p>Name:</p><input id="newLocationName" type="text" value=""></li>
+            <li><p>latitude:</p><input id="newLat" type="text" value=""></li>
+            <li><p>longitude:</p><input id="newLng" type="text" value=""></li>
+            <li ><button id="LocationSubmit">登録</button></li>
+          </ul>
+    </div>
+<a-scene id="main-scene" vr-mode-ui='enabled: false'  arjs='sourceType: webcam; videoTexture: true; debugUIEnabled: false' renderer='antialias: true; logarithmicDepthBuffer: true; alpha: true; '>
     <a-entity id="ARcamera" camera look-controls wasd-controls gps-camera='gpsMinDistance: 5'  rotation-reader>
         <a-entity cursor="fuse: true;"
                   position="0 0 -3"
@@ -20,14 +33,17 @@
                   material="color: #00CED1; shader: flat; opacity: 0.6">
         </a-entity>
     </a-entity>
+
+     <a-entity  position="0 0 10" gltf-model ="./lib/obj/north.glb" ></a-entity>
 </a-scene>
 <div id="nav" class="">
-    <div id="locationName">Text</div>
-        <div id ="distance">Trrrrrrrrrrrrrrrrrextm</div>
+    <div id="locationName">The time is always right to do what is right.</div>
+        <div id ="distance">The government of the people, by the people, for the people</div>
 </div>
 <!-- arjs-look-controls='smoothingFactor: 0.1' -->
 <!-- <script type="text/javascript" src="./lib/js/index.js"></script> -->
-<script src="./lib/js/CalcAR.js" type="module"></script>
+<!-- <script src="./lib/js/CalcAR.js" type="module"></script> -->
+ <script type="module" src="./lib/js/index.js"></script>
 </body>
 </html>
 
